samples/_failures_safe/1761551191_476c5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e90a6382.c: In function ‘main’:
./samples/SAFE/__tmp_e90a6382.c:171:9: error: expected declaration or statement at end of input
  171 |         printf("Failed to read first matrix\n");
      |         ^~~~~~
./samples/SAFE/__tmp_e90a6382.c:171:9: error: expected declaration or statement at end of input
